2016-01-15  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implement decoding Fujitsu Verify Control Page.

2016-01-15  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	* SCSI/Types.cs:
	  Added all known vendor density and medium type codes.

2016-01-15  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	* SCSI/Types.cs:
	* DiscImageChef.Decoders.csproj:
	  Moved density and medium type codes to a separate file.

2016-01-15  Natalia Portillo  <claunia@claunia.com>

	* SCSI/SSC/BlockLimits.cs:
	* SCSI/SSC/DensitySupport.cs:
	* DiscImageChef.Decoders.csproj:
	  Added decoders for SCSI SSC READ BLOCK LIMITS and REPORT
	  DENSITY SUPPORT.

	* SCSI/Modes.cs:
	  Corrected mode size.

2015-12-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Inquiry.cs:
	  Fixes decoding for devices that follow old 5-byte SCSI
	  INQUIRY format.

	* SCSI/Sense.cs:
	  Fixes printing of sense block missing a newline.

2015-12-14  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Checked more information, GCK is Grupo Condor S.L. from
	  Spain.

2015-12-13  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Added manufacturer code for a GCK disc I just came upon.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	  Additional length may be bigger than provided buffer.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	* DVD/Enums.cs:
	  Added HD DVD types.

	* SCSI/Sense.cs:
	  Solved SCSI sense decoding.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Added disc type and manufacturer lookup from ATIP.

	* CD/PMA.cs:
	  Implement full PMA decoding.

	* CD/FullTOC.cs:
	  Implement decoding disc ID.

	* SCSI/MMC/DiscInformation.cs:
	  Disc ID is 24-bit.

	* CD/CDTextOnLeadIn.cs:
	  CD-TEXT can be empty without being null, do not decode an
	  empty one.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/CDTextOnLeadIn.cs: